# QNN-for-Stochastic-Optimization

./: .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: PAPER_SUMMARY.md
notebooks/: qnn_stochastic_opt.ipynb
notebooks/results/: alpha_sensitivity.csv  dataset_size_impact.csv  delta_sensitivity.csv  experiment_results.json  iqnn_cflp10x10.pt  qnn_cflp10x10.pt
scripts/: __init__.py  benchmark_risk_averse.py  benchmark_risk_neutral.py  run_dataset_impact.py
src/qnn_stoch_opt/: __init__.py  endogenous.py
src/qnn_stoch_opt/case_studies/: __init__.py  cflp.py  cflp_multistage.py  ip.py
src/qnn_stoch_opt/data/: __init__.py  dataset.py  saa_solver.py  scenario_generation.py
src/qnn_stoch_opt/models/: __init__.py  cascade.py  iqnn.py  loss.py  qnn.py  trainer.py
src/qnn_stoch_opt/optimization/: __init__.py  milp_formulation.py  multistage_optimizer.py  stochastic_optimizer.py
src/qnn_stoch_opt/utils/: __init__.py  metrics.py
tests/: __init__.py  test_cascade.py  test_dataset.py  test_milp_fix.py  test_milp_formulation.py  test_saa_solver.py  test_scenario_generation.py  test_stochastic_optimizer.py
